force-app/main/default/objects/Contact/fields/Permanent_Residency_Date__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Residency_Date__c</fullName>
    <label>Permanent Residency Date</label>
    <type>Date</type>
</CustomField>