force-app/main/default/objects/Contact/fields/Portal_Answer_Secret_Next_Login__c.field-meta.xml
<CustomField>
    <fullName>Portal_Answer_Secret_Next_Login__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this button if the user should be required to answer their security question the next time they log into the portal</inlineHelpText>
    <label>Portal Answer Secret Next Login</label>
    <type>Checkbox</type>
</CustomField>