force-app/main/default/objects/Contact/fields/Portal_Secret_Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Portal_Secret_Question_Answer__c</fullName>
    <label>Portal Secret Question Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>