force-app/main/default/objects/Contact/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <description>RJohnston 11/5/21 - to allow contacts to have a preferred name recorded 
https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=10&amp;projectKey=OIBCR&amp;modal=detail&amp;selectedIssue=OIBCR-349</description>
    <label>Preferred Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>