force-app/main/default/objects/Contact/fields/Qualified_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified Declaration</label>
    <type>Checkbox</type>
</CustomField>