force-app/main/default/objects/Contact/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <description>Secret question for portal user verification</description>
    <label>Secret Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In what city were you born?</fullName>
            </value>
            <value>
                <fullName>What is your mother&apos;s maiden name?</fullName>
            </value>
            <value>
                <fullName>What is your pet&apos;s name?</fullName>
            </value>
            <value>
                <fullName>What was your childhood nickname?</fullName>
            </value>
            <value>
                <fullName>In what city did you meet your spouse/significant other?</fullName>
            </value>
            <value>
                <fullName>What is the name of your favorite childhood friend?</fullName>
            </value>
            <value>
                <fullName>In what city was your first job?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>