force-app/main/default/objects/Contact/fields/Security_Question_Failure__c.field-meta.xml
<CustomField>
    <fullName>Security_Question_Failure__c</fullName>
    <description>Stores number of failures when attempting to answer the security question for the customer portal.</description>
    <inlineHelpText>Number of times user has failed to enter their security question correctly</inlineHelpText>
    <label>Security Question Failure</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>