force-app/main/default/objects/Contact/fields/Sub_Aggregator__c.field-meta.xml
<CustomField>
    <fullName>Sub_Aggregator__c</fullName>
    <label>Sub Aggregator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>