force-app/main/default/objects/Contact/fields/Supporting_Documents_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documents_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting Documents Declaration</label>
    <type>Checkbox</type>
</CustomField>