force-app/main/default/objects/Contact/fields/Temporary_Visa_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Visa_Expiry_Date__c</fullName>
    <label>Temporary Visa Expiry Date</label>
    <type>Date</type>
</CustomField>