force-app/main/default/objects/Contact/fields/Temporary_Visa_Suitability__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Visa_Suitability__c</fullName>
    <label>Temporary Visa Suitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>