force-app/main/default/objects/Contact/fields/Temporary_Visa_Suitability_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Visa_Suitability_Commentary__c</fullName>
    <label>Temporary Visa Suitability Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>