force-app/main/default/objects/Contact/fields/Temporary_Visa_Suitability_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Visa_Suitability_Rule_Check__c</fullName>
    <description>Temporary Visa Suitability Rule Check</description>
    <formula>IF(IF(OR((NOT(ISPICKVAL(Has_applied_for_Permanent_Residency_Visa__c,&apos;No&apos;))),(IF(ISNULL(Temporary_Visa_Expiry_Date__c),true,false))),true,false),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temporary Visa Suitability Rule Check</label>
    <type>Text</type>
</CustomField>