force-app/main/default/objects/Contact/fields/Termination_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Termination_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination Declaration</label>
    <type>Checkbox</type>
</CustomField>