force-app/main/default/objects/Contact/fields/Visa_Subclass_Code__c.field-meta.xml
<CustomField>
    <fullName>Visa_Subclass_Code__c</fullName>
    <label>Visa Subclass Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>