force-app/main/default/objects/Contact/recordTypes/Broker_Underwriter.recordType-meta.xml
<RecordType>
    <fullName>Broker_Underwriter</fullName>
    <active>true</active>
    <label>Broker Underwriter</label>
</RecordType>