force-app/main/default/objects/Contact/recordTypes/External_Contact.recordType-meta.xml
<RecordType>
    <fullName>External_Contact</fullName>
    <active>true</active>
    <label>External Contact</label>
</RecordType>