force-app/main/default/objects/Contact/validationRules/clcommon__Check_Valid_Month_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>clcommon__Check_Valid_Month_Value</fullName>
    <active>true</active>
    <description>Month can not have value greater than 11</description>
    <errorConditionFormula>clcommon__Months_at_current_address__c &gt;11||clcommon__Months_at_current_address__c &lt;0</errorConditionFormula>
    <errorDisplayField>clcommon__Months_at_current_address__c</errorDisplayField>
    <errorMessage>Month can not have value more than 11</errorMessage>
</ValidationRule>