force-app/main/default/objects/Contact/validationRules/Date_Of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Of_Birth</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(MONTH(TODAY())&gt;MONTH( Birthdate ),YEAR(TODAY())-YEAR(Birthdate),IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),YEAR(TODAY())-YEAR(Birthdate),(YEAR(TODAY())-YEAR(Birthdate))-1))&lt;18,NOT(ISBLANK( Birthdate )))</errorConditionFormula>
    <errorMessage>Age should be minimum of 18 years.</errorMessage>
</ValidationRule>