force-app/main/default/objects/Contact/validationRules/genesis__Social_Security_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>genesis__Social_Security_Number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(LEN (ints__Social_Security_Number__c) = 0,REGEX( ints__Social_Security_Number__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)))</errorConditionFormula>
    <errorDisplayField>ints__Social_Security_Number__c</errorDisplayField>
    <errorMessage>SSN must be in this format: 999-99-9999.</errorMessage>
</ValidationRule>