force-app/main/default/objects/Contact/validationRules/Middle_Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Middle_Name_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(MiddleName)),NOT(REGEX(MiddleName,&quot;([a-zA-Z ])*&quot;)))</errorConditionFormula>
    <errorMessage>Middle name can only contain letters.</errorMessage>
</ValidationRule>