force-app/main/default/objects/Contact/listViews/genesis__BirthdaysThisMonth.listView-meta.xml
<ListView>
    <fullName>genesis__BirthdaysThisMonth</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Birthdays This Month</label>
</ListView>